# Nexus-Target-Verifier

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SECURITY.md  cmake_install.cmake
Nexus_Release_v1/: DO_NOT_RUN_YET.pl  DO_NOT_RUN_YET.sh  tar.py
Nexus_Release_v1/src/test/: main.cpp  memcheck.c
docs/: README.html  setup.html  troubelshooting.html
news/2023-09-20/: README.md
